feat: integrate GStracciniBot for managing background jobs
Add the `GStracciniBot` class to handle various background jobs
such as branches, comments, issues, and more. This inclusion
provides methods to list and run jobs.

Enhance API endpoints to include routes for GStraccini bot jobs
(`/api/v1/gstraccini-jobs` and `/api/v1/gstraccini-jobs/run`),
allowing the triggering of specific jobs via POST requests.

Update UI to display a new section for GStraccini bot jobs,
embedding runnable "Run" buttons similarly to webhooks management.

Modify `Webhooks.php` request methods to accept headers
before payload for consistency in API calls.

Update `.htaccess` rules to facilitate new URLs for
GStraccini bot actions. Expand OpenAPI documentation
to capture the new functionalities of the API endpoints.
